--- a/Sharding repl cache/compose.yaml
+++ b/Sharding repl cache/compose.yaml
@@ -314,7 +314,7 @@ services:
     environment:
       MONGODB_URL: "mongodb://mongos_router1"
       MONGODB_DATABASE_NAME: "somedb"
-      REDIS_URL: "redis://redis_cluster:6379"
+      REDIS_URL: "redis://redis_1:6379"
 
 networks:
   app-network:
