--- a/Mongo sharding/compose.yaml
+++ b/Mongo sharding/compose.yaml
@@ -111,8 +111,11 @@ services:
       - mongos_router1
     ports:
       - 8080:8080
+    networks:
+      app-network:
+        ipv4_address: 173.17.0.99
     environment:
-      MONGODB_URL: "mongodb://mongos_router1"
+      MONGODB_URL: "mongodb://mongos_router1:27030"
       MONGODB_DATABASE_NAME: "somedb"
 
 networks:
